Add html validation to cypress tests (#4688)
* update entity.cy.ts

* update cypress Dockerfile

* add html-validate, and cypress-html-validate

* use htmlvalidate() in cypress tests

* use single quotes in html

* add more team.php tests

* add search user test on (sys)admin page

* no useless attribute whitespaces

* suppress html-validate errors from 3rd party tools

* make sortable tables accessible
add aria-sort
convert span icons to buttons, add aria-label
add title and make them i18n

* add type=button and more aria-labels

* add type=text to input

* use placeholder to avoid empty heading

* harmonize template select layout

* remove useless span elements

* do not use button as child of link

* nicer highlighting when navigating by keyboard

* add a label to userExportFormat on profile page

* binary-setting template: avoid id duplication, replace label wrapper with span

* fix id saml_base_url -> saml_baseurl

* no need to use different id hidden_ldap_password -> ldap_password

* move todo statement to twig comment

* label -> span

* add missing aria-labels for form elements

* add aria-label to start rating

* no duplicate ids: newFieldForm

* convert links/span to button to make page more accessibly

* upgrade elab-cypress container

* upgrade cypress, cypress-html-validate, html-validate, fix ajv@^6.12.6 for eslint

* install as root

* add back typescript for node user

* install all deps as node user

* config cypress to use html-validate

* use same i18n handle for both cases

* add comment for placeholder

* fix html violations

* update yarn.lock

* meh: phpcs comment indentation

* composer upgrade

* remove explicit ajv dependency

* fix double space

* update cypress, html-validate, and cypress-html-validate

* fix switches, add more labels

* lint yarn plugin tinymce

* make tabbed-menu accessible by keyboard

* nicer toggle scope User/Team switch in t

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -283,16 +283,25 @@ h5 {
     padding: 0;
 
     li {
-        color: $medium;
-        cursor: pointer;
         display: inline;
+        margin: 0;
         margin-right: 2%;
-        text-transform: uppercase;
-    }
 
-    .selected {
-        border-bottom: 6px solid $elabblue;
-        padding-bottom: 0;
+        button {
+            border: 0;
+            border-radius: 0;
+            color: $medium;
+            font-weight: 500;
+            margin: 0;
+            margin-bottom: 6px;
+            padding: 0;
+            text-transform: uppercase;
+        }
+
+        .selected {
+            border-bottom: 6px solid $elabblue;
+            margin-bottom: 0;
+        }
     }
 }
 
@@ -458,7 +467,7 @@ tr:nth-child(odd) {
 
 /* required labels/input for extra fields */
 #metadataDiv,
-#newFieldForm {
+.new-field-form {
     /* any invalid field will get this red border */
     :invalid {
         border: 1px solid $lightred;
@@ -477,10 +486,14 @@ tr:nth-child(odd) {
 .vertical-separator {
     border-right: 1px solid $secondlevel;
     height: 1.8rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
 
     /* separator disappears on small screens */
     @media (max-width: 550px) {
-        display: none;
+        border-right: 0;
+        margin-left: 0;
+        margin-right: 0.5rem;
     }
 }
 
@@ -618,6 +631,11 @@ tr:nth-child(odd) {
 /* make the text of buttons in bold to increase readability because contrast ratio is not great */
 .btn {
     font-weight: bold;
+}
+
+.btn-dropdown-item {
+    font-weight: 400;
+    line-height: normal;
 }
 
 /* SIDE PANEL */
@@ -786,6 +804,11 @@ the form-control fails to do that so we do the border ourselves */
     background-color: $firstlevel;
 }
 
+.hl-hover-gray:focus-visible {
+    background-color: $firstlevel;
+    outline: none;
+}
+
 /* COMMENTS */
 .comment-header {
     background-color: $firstlevel;
@@ -853,6 +876,10 @@ the form-control fails to do that so we do the border ourselves */
     line-height: 150%;
 }
 
+.lh-normal {
+    line-height: normal;
+}
+
 .togglable-section-title {
     color: $medium;
     font-size: 100%;
@@ -862,10 +889,12 @@ the form-control fails to do that so we do the border ourselves */
 
 /* Category and Status buttons */
 .catstat-btn {
+    border: 0;
+    border-radius: .25rem;
     font-size: 72%;
     font-weight: bold;
+    line-height: normal;
     text-transform: uppercase;
-    border-radius: .25rem;
     padding: .25rem;
 
     /* Only Category */
@@ -1345,7 +1374,7 @@ input:checked + .slider {
 }
 
 input:focus + .slider {
-    box-shadow: 0 0 1px $elabblue;
+    box-shadow: 0 0 8px $elabblue;
 }
 
 input:checked + .slider::before {
