--- a/src/templates/editusers.html
+++ b/src/templates/editusers.html
@@ -56,12 +56,12 @@
         {% for user in usersArr %}
           {% include('archive-user-modal.html') %}
           {# Modal for managing users to teams, generated for each user #}
-          <div class='modal fade' id='manageUsers2teamsModal_{{ user.userid }}' tabindex='-1' role='dialog' aria-label='{{ 'Manage teams for user'|trans }}' aria-hidden='true'>
+          <div class='modal fade' id='manageUsers2teamsModal_{{ user.userid }}' tabindex='-1' role='dialog' aria-labelledby='manageTeamsForUser' aria-hidden='true'>
             <div class='modal-dialog modal-xl' role='document'>
               <div class='modal-content'>
                 <div class='modal-header'>
-                  <h5 class='modal-title'>{{ 'Manage teams for user'|trans }} - {{ user.fullname|raw }}</h5>
-                  <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+                  <h5 class='modal-title' id='manageTeamsForUser'>{{ 'Manage teams for user'|trans }} - {{ user.fullname|raw }}</h5>
+                  <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
                     <span aria-hidden='true'>&times;</span>
                   </button>
                 </div>
@@ -80,7 +80,7 @@
                               <option value='2' {{ currentTeam.usergroup == 2 ? 'selected' }}>{{ 'Admin'|trans }}</option>
                               <option value='4' {{ currentTeam.usergroup == 4 ? 'selected' }}>{{ 'User'|trans }}</option>
                             </select>
-                            <button data-action='patch-user2team-group' data-userid='{{ user.userid }}' data-team='{{ team.id }}' data-target='usergroup' class='btn btn-primary brl-none'>{{ 'Save'|trans }}</button>
+                            <button type='button' data-action='patch-user2team-group' data-userid='{{ user.userid }}' data-team='{{ team.id }}' data-target='usergroup' class='btn btn-primary brl-none'>{{ 'Save'|trans }}</button>
                           </span>
                         </div>
                         <div class='d-flex justify-content-between'>
@@ -103,7 +103,7 @@
                         <option value='{{ team.id }}'>{{ team.name }}</option>
                         {% endfor %}
                       </select>
-                      <button data-action='create-user2team' data-userid='{{ user.userid }}' class='btn btn-primary'>{{ 'Go'|trans }}</button>
+                      <button type='button' data-action='create-user2team' data-userid='{{ user.userid }}' class='btn btn-primary'>{{ 'Go'|trans }}</button>
                     </span>
                   {% endif %}
                 </div>
@@ -116,7 +116,7 @@
           {# end modal #}
         {% endfor %}
 
-        <table id='usersTable' class='table' aria-label='users table' data-table-sort='true'>
+        <table id='usersTable' class='table' aria-label='{{ 'Users table'|trans }}' data-table-sort='true'>
           <thead>
             <tr>
               <th scope='col'>{{ 'User ID'|trans }}</th>
@@ -167,7 +167,7 @@
                 </td>
                 <td>
                   <div class='d-flex justify-content-between'>
-                    <label class='switch ucp-align {{ App.Users.userData.is_sysadmin == 0 ? 'disabled' }}'>
+                    <label class='switch ucp-align {{- App.Users.userData.is_sysadmin == 0 ? ' disabled' }}'>
                       <input type='checkbox' autocomplete='off' {{ App.Users.userData.is_sysadmin == 0 ? "disabled='disabled'" }} data-trigger='change' data-model='users/{{ user.userid }}' data-target='is_sysadmin' {{ user.is_sysadmin ? 'checked="checked"' }}>
                       <span class='slider'></span>
                     </label>
@@ -176,9 +176,9 @@
                 <td>{% if user.mfa_secret %}<span title='{{ '2FA enabled'|trans }}'><i title='{{ '2FA enabled'|trans }}' class='fas fa-user-shield'></i></span>{% endif %}</td>
                 <td>
                   {% if App.Users.userData.is_sysadmin == '1' %}
-                    <div class='clickable p-2 hl-hover-gray text-center rounded' title='{{ 'Reset user password'|trans }}' data-action='toggle-next' data-target='resetPasswordModal'>
-                      <i class='fas fa-fw fa-key mr-1'></i>
-                    </div>
+                    <button class='btn p-2 hl-hover-gray text-center mr-1' title='{{ 'Reset user password'|trans }}' data-action='toggle-next' data-target='resetPasswordModal'>
+                      <i class='fas fa-fw fa-key'></i>
+                    </button>
                     <div hidden class='input-group'>
                       {% set pattern = '.{' ~ minPasswordLength() ~ ',}' %}
                       <input class='form-control' placeholder='{{ 'Set new password'|trans }}' type='password' id='resetUserPasswordInput_{{ user.userid }}' autocomplete='new-password' pattern='{{ pattern }}' />
@@ -186,36 +186,36 @@
                         <span class='btn btn-light input-border' tabindex='-1' data-action='toggle-password' data-target='resetUserPasswordInput_{{ user.userid }}'><i class='fas fa-eye' aria-hidden='true'></i></span>
                       </div>
                       <div class='input-group-append'>
-                        <button data-action='reset-user-password' data-userid='{{ user.userid }}' class='btn btn-primary'>{{ 'Save'|trans }}</button>
+                        <button type='button' data-action='reset-user-password' data-userid='{{ user.userid }}' class='btn btn-primary'>{{ 'Save'|trans }}</button>
                       </div>
                     </div>
                   {% endif %}
                   {# MORE OPTIONS MENU #}
                   <div class='dropdown'>
-                    <div class='clickable p-2 hl-hover-gray text-center rounded' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' role='button'>
-                      <i class='fas fa-ellipsis-v'></i>
-                    </div>
-                    <div class='dropdown-menu dropdown-menu-right' aria-label='{{ 'More options'|trans }}'>
+                    <button class='btn p-2 hl-hover-gray text-center ' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' title='{{ 'More options'|trans }}' aria-label='{{ 'More options'|trans }}' type='button'>
+                      <i class='fas fa-ellipsis-v fa-fw'></i>
+                    </button>
+                    <div class='dropdown-menu dropdown-menu-right'>
                       {# MANAGE TEAMS #}
                       {% if App.Users.userData.is_sysadmin and (App.Request.getScriptName|split('/')|last == 'sysconfig.php') %}
-                        <div class='dropdown-item' data-action='toggle-modal' data-target='manageUsers2teamsModal_{{ user.userid }}'>
+                        <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='toggle-modal' data-target='manageUsers2teamsModal_{{ user.userid }}'>
                           <i class='mr-1 fas fa-pencil fa-fw'></i>{{ 'Manage teams for user'|trans }}
-                        </div>
+                        </button>
                       {% endif %}
                       {# on admin page, allow promoting someone to admin of the same team #}
                       {% if App.Request.getScriptName|split('/')|last == 'admin.php' %}
                         {% set currentTeam = user.teams|filter(t => t.id == App.Users.userData.team)|first %}
                         {# Promote to Admin #}
                         {% if currentTeam.usergroup == 4 %}
-                          <div class='dropdown-item' data-action='toggle-admin-user' data-promote='1' data-team='{{ App.Users.userData.team }}' data-userid='{{ user.userid }}'>
+                          <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='toggle-admin-user' data-promote='1' data-team='{{ App.Users.userData.team }}' data-userid='{{ user.userid }}'>
                             <i class='fas fa-fw fa-up-long mr-1'></i>{{ 'Promote to Admin'|trans }}
-                          </div>
+                          </button>
                         {% endif %}
                         {# Demote from Admin #}
                         {% if currentTeam.usergroup == 2 %}
-                          <div class='dropdown-item' data-action='toggle-admin-user' data-promote='0' data-userid='{{ user.userid }}'>
+                          <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='toggle-admin-user' data-promote='0' data-userid='{{ user.userid }}'>
                             <i class='fas fa-fw fa-down-long mr-1'></i>{{ 'Demote from Admin'|trans }}
-                          </div>
+                          </button>
                         {% endif %}
                         {# Add to team #}
                         {% if user.teams|filter(t => t.id == App.Users.userData.team) is empty and App.Config.configArr.admins_import_users %}
@@ -226,26 +226,28 @@
                       {% endif %}
                       {# DISABLE 2FA: only for sysadmin if user has 2fa enabled #}
                       {% if user.mfa_secret and App.Users.userData.is_sysadmin %}
-                        <div class='dropdown-item' data-action='remove-user-2fa' data-userid='{{ user.userid }}'>
+                        <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='remove-user-2fa' data-userid='{{ user.userid }}'>
                           <i class='fas fa-fw fa-user-shield mr-1'></i>{{ 'Disable 2FA'|trans }}
-                        </div>
+                        </button>
                       {% endif %}
                       {# ARCHIVE USER #}
                       {% if user.archived %}
-                        <div class='dropdown-item' data-action='toggle-modal' data-target='archiveUserModal_{{ user.userid }}'>
+                        <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='toggle-modal' data-target='archiveUserModal_{{ user.userid }}'>
                           <i class='fas fa-fw fa-box-archive mr-1'></i>{{ 'Unarchive user'|trans }}
-                        </div>
+                        </button>
                       {% else %}
-                      <div class='dropdown-item' data-action='toggle-modal' data-target='archiveUserModal_{{ user.userid }}'>
+                        <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='toggle-modal' data-target='archiveUserModal_{{ user.userid }}'>
                           <i class='fas fa-fw fa-box-archive mr-1'></i>{{ 'Archive user'|trans }}
-                        </div>
+                        </button>
                       {% endif %}
                       {% if user.validated == 0 %}
-                        <div class='dropdown-item' data-action='validate-user' data-userid='{{ user.userid }}'>
+                        <button type='button' class='btn btn-dropdown-item dropdown-item' data-action='validate-user' data-userid='{{ user.userid }}'>
                           <i class='fas fa-fw fa-check mr-1'></i>{{ 'Validate user'|trans }}
-                        </div>
+                        </button>
                       {% endif %}
-                      <div class='dropdown-item hover-danger' data-action='destroy-user' data-userid='{{ user.userid }}'><i class='fas fa-fw fa-trash-alt mr-1'></i>{{ 'Delete user'|trans }}</div>
+                      <button type='button' class='btn btn-dropdown-item dropdown-item hover-danger' data-action='destroy-user' data-userid='{{ user.userid }}'>
+                        <i class='fas fa-fw fa-trash-alt mr-1'></i>{{ 'Delete user'|trans }}
+                      </button>
                     </div>
                   </div>
                 </td>
@@ -313,7 +315,7 @@
 
     {# SUBMIT #}
     <div class='col-md-12 text-center mt-2'>
-      <button data-action='create-user' class='btn btn-primary'>{{ 'Create'|trans }}</button>
+      <button type='button' data-action='create-user' class='btn btn-primary'>{{ 'Create'|trans }}</button>
     </div>
   </div>
 </div>
@@ -343,7 +345,7 @@
 
     {% if App.Request.query.has('remote_dir_query') %}
       <div class='mt-2'>
-        <table class='table' id='remoteDirectoryUsersTable' aria-label='Remote directory users list' data-table-sort='true'>
+        <table class='table' id='remoteDirectoryUsersTable' aria-label='{{ 'Remote directory users list'|trans }}' data-table-sort='true'>
           <thead>
             <tr>
               <th scope='col'>{{ 'Selection'|trans }}</th>
@@ -380,7 +382,7 @@
             <input type='checkbox' class='mr-1' id='remoteUserIsAdmin'>{{ 'Admin'|trans }}
           </div>
         </div>
-          <button data-action='create-user-from-remote' class='brl-none btn btn-primary'>{{ 'Add selected'|trans }}</button>
+          <button type='button' data-action='create-user-from-remote' class='brl-none btn btn-primary'>{{ 'Add selected'|trans }}</button>
       </div>
     {% endif %}
   </div>
