--- a/src/templates/register.html
+++ b/src/templates/register.html
@@ -11,7 +11,7 @@
     <div class='modal-content'>
       <div class='modal-header'>
         <h5 class='modal-title' id='policyModalLabel'>{{ 'Privacy policy'|trans }}</h5>
-        <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+        <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
@@ -40,6 +40,9 @@
         {# TEAM #}
         <div class='row'>
           <label for='team'>{{ 'Team'|trans }}</label>
+          {% if App.Config.configArr.debug -%}
+            <!-- [html-validate-disable-block element-permitted-content: suppress error from select picker: div child of button] -->
+          {%- endif %}
           <select name='team' class='form-control selectpicker' id='team' required data-show-subtext='true' data-live-search='true'>
             <option value='' selected disabled>{{ 'Select a team'|trans }}</option>
             {# on this page, only show the visible teams #}
@@ -50,7 +53,7 @@
         </div>
 
         {# EMAIL #}
-        <div class='row'>
+        <div class='row mt-2'>
           <label for='email'>{{ 'Email'|trans }}</label>
           <input name='email' class='form-control' type='email' id='email' autocomplete='email' required />
           {% if App.Config.configArr.email_domain %}
@@ -62,7 +65,7 @@
         </div>
 
         {# PASSWORD #}
-        <div class='row'>
+        <div class='row mt-2'>
           <label for='password'>{{ 'Password'|trans }}</label>
           <div class='input-group'>
             <input name='password' type='password' class='form-control' title='8 characters minimum' id='password' pattern='{{ pattern }}' autocomplete='new-password' required />
@@ -73,20 +76,20 @@
         </div>
 
         {# FIRSTNAME #}
-        <div class='row'>
+        <div class='row mt-2'>
           <label for='firstname'>{{ 'Firstname'|trans }}</label>
           <input name='firstname' class='form-control' type='text' id='firstname' autocomplete='given-name' required />
         </div>
 
         {# LASTNAME #}
-        <div class='row'>
+        <div class='row mt-2'>
           <label for='lastname'>{{ 'Lastname'|trans }}</label>
           <input name='lastname' class='form-control' type='text' id='lastname' autocomplete='family-name' required />
         </div>
 
         {# PRIVACY POLICY #}
         {% if App.Config.configArr.privacy_policy %}
-        <div class='row'>
+        <div class='row mt-2'>
           <div class='form-group form-check'>
             <input name='privacy-policy' class='form-check-input' type='checkbox' id='privacy-policy' required />
             <label class='form-check-label' for='privacy-policy'>
