--- a/src/templates/steps-links-view.html
+++ b/src/templates/steps-links-view.html
@@ -1,8 +1,8 @@
 {# STEPS #}
 <div id='stepsDiv'>
 {% if Entity.entityData.steps %}
-  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down mr-2 fa-fw'></i>{{ 'Steps'|trans }}</h3>
-  <div class='row mt-2' data-save-hidden='stepsDivContent'>
+  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='stepsDivContent'><i class='fas fa-caret-down mr-2 fa-fw'></i>{{ 'Steps'|trans }}</h3>
+  <div class='row mt-2' id='stepsDivContent' data-save-hidden='stepsDivContent'>
     <div class='ml-3 mt-3 col-md-12'>
       {% for step in Entity.entityData.steps %}
         <div id='step_view_{{ step.id }}' class='mb-2 rounded p-1 {{ step.finished ? 'finished' }} {{ App.Request.query.get('highlightstep') == step.id ? 'highlighted' }}'>
@@ -27,30 +27,24 @@
 
 {# EXPERIMENTS LINKS #}
 {% if Entity.entityData.experiments_links %}
-  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down mr-2 fa-fw'></i>{% trans %}
+  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='linkedExperimentsDiv'><i class='fas fa-caret-down mr-2 fa-fw'></i>{% trans %}
     Linked experiment
     {% plural 2 %}
     Linked experiments
     {% endtrans %}</h3>
   <div class='row mt-2' id='linkedExperimentsDiv' data-save-hidden='linkedExperimentsDiv'>
-    <div class='ml-3 mt-3 col-md-12'>
-      {% for link in Entity.entityData.experiments_links %}
+    {% for link in Entity.entityData.experiments_links %}
+      <div class='ml-3 mt-3 col-md-12'>
         {% set randomId = random() %}
-        <div class='d-flex mb-4' id='parent_{{ randomId }}'>
-          <div class='mr-2'>
-            <i class='fas fa-link fa-fw'></i>
-          </div>
-          <div>
-            {% if link.link_state == 2 %}<i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{% endif %}
-            <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span>
-            <a href='experiments.php?mode=view&id={{ link.itemid }}' class='text-dark'>{{ link.title|raw }}</a>
-          </div>
+        <div class='d-flex mb-4 align-items-center' id='parent_{{ randomId }}'>
+          <i class='fas fa-link fa-fw mr-2'></i>
+          {% if link.link_state == 2 %}<i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{% endif %}
+          <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span>
+          <a href='experiments.php?mode=view&id={{ link.itemid }}' class='text-dark mr-auto'>{{ link.title|raw }}</a>
           {# toggle body #}
-          <div class='ml-auto align-self-center mr-3'>
-            <div data-type='experiments' data-action='toggle-body' data-id='{{ link.itemid }}' data-randid='{{ randomId }}' title='{{ 'Toggle content'|trans }}' class='rounded p-2 hl-hover-gray'>
-              <i class='fas fa-square-plus'></i>
-            </div>
-          </div>
+          <button type='button' data-type='experiments' data-action='toggle-body' data-id='{{ link.itemid }}' data-randid='{{ randomId }}' title='{{ 'Toggle content'|trans }}' aria-label='{{ 'Toggle content'|trans }}' class='btn p-2 hl-hover-gray mr-3 lh-normal border-0 my-n2'>
+            <i class='fas fa-fw fa-square-plus'></i>
+          </button>
         </div>
         {# container to hold the body of the entity if it is toggled with the +/- icon #}
         {# a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well #}
@@ -58,34 +52,28 @@
           {# this div will hold the content #}
           <div></div>
         </div>
-      {% endfor %}
-    </div>
+      </div>
+    {% endfor %}
   </div>
   <hr>
 {% endif %}
 
 {# ITEMS LINKS #}
 {% if Entity.entityData.items_links %}
-  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down mr-2 fa-fw'></i>{{ 'Linked resources'|trans }}</h3>
+  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='linkedItemsDiv'><i class='fas fa-caret-down mr-2 fa-fw'></i>{{ 'Linked resources'|trans }}</h3>
   <div class='row mt-2' id='linkedItemsDiv' data-save-hidden='linkedItemsDiv'>
-    <div class='ml-3 mt-3 col-md-12'>
-      {% for link in Entity.entityData.items_links %}
+    {% for link in Entity.entityData.items_links %}
+      <div class='ml-3 mt-3 col-md-12'>
         {% set randomId = random() %}
-        <div class='d-flex mb-4' id='parent_{{ randomId }}'>
-          <div class='mr-2'>
-            <i class='fas fa-link fa-fw'></i>
-          </div>
-          <div>
-            {% if link.link_state == 2 %}<i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{% endif %}
-            <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span>
-            <a href='database.php?mode=view&id={{ link.itemid }}' class='text-dark'>{{ link.title|raw }}</a>
-          </div>
+        <div class='d-flex mb-4 align-items-center' id='parent_{{ randomId }}'>
+          <i class='fas fa-link fa-fw mr-2'></i>
+          {% if link.link_state == 2 %}<i class='fas fa-fw fa-box-archive fa-fw mr-1'></i>{% endif %}
+          <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span>
+          <a href='database.php?mode=view&id={{ link.itemid }}' class='text-dark mr-auto'>{{ link.title|raw }}</a>
           {# toggle body #}
-          <div class='ml-auto align-self-center mr-3'>
-            <div data-type='items' data-action='toggle-body' data-id='{{ link.itemid }}' data-randid='{{ randomId }}' title='{{ 'Toggle content'|trans }}' class='rounded p-2 hl-hover-gray'>
-              <i class='fas fa-square-plus'></i>
-            </div>
-          </div>
+          <button type='button' data-type='items' data-action='toggle-body' data-id='{{ link.itemid }}' data-randid='{{ randomId }}' title='{{ 'Toggle content'|trans }}' aria-label='{{ 'Toggle content'|trans }}' class='btn p-2 hl-hover-gray mr-3 lh-normal border-0 my-n2'>
+            <i class='fas fa-fw fa-square-plus'></i>
+          </button>
         </div>
         {# container to hold the body of the entity if it is toggled with the +/- icon #}
         {# a random id is used because with the favorites the item can appear two times on the page so the old blah_123 doesn't work well #}
@@ -93,8 +81,8 @@
           {# this div will hold the content #}
           <div></div>
         </div>
-      {% endfor %}
-    </div>
+      </div>
+    {% endfor %}
   </div>
   <hr>
 {% endif %}
@@ -104,39 +92,31 @@
 
   {# RELATED EXPERIMENTS #}
   {% if relatedExperimentsArr %}
-    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down mr-2 fa-fw'></i>{{ 'Related experiments'|trans }}</h3>
-    <div class='row mt-2' data-save-hidden='relatedExperimentsDiv'>
-      <div class='ml-3 mt-3 col-md-12' id='relatedExperimentsDiv'>
-        {% for link in relatedExperimentsArr %}
+    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='relatedExperimentsDiv'><i class='fas fa-caret-down mr-2 fa-fw'></i>{{ 'Related experiments'|trans }}</h3>
+    <div class='row mt-2' id='relatedExperimentsDiv' data-save-hidden='relatedExperimentsDiv'>
+      {% for link in relatedExperimentsArr %}
+        <div class='ml-3 mt-3 col-md-12'>
           {% set randomId = random() %}
-          <div class='d-flex mb-4' id='parent_{{ randomId }}'>
-            <div class='align-self-center mr-2'>
-              <i class='fas fa-link fa-fw'></i>
-            </div>
-            <div>
+          <div class='d-flex mb-4 align-items-center' id='parent_{{ randomId }}'>
+              <i class='fas fa-link fa-fw mr-2'></i>
               {% if link.category_title %}
                 <span class='catstat-btn category-btn mr-1' style='--bg: #{{ link.category_color }}'>{{ link.category_title|raw }}</span>
               {% endif %}
-              <a href='experiments.php?mode=view&id={{ link.entityid }}' class='text-dark'>{{ link.title|raw }}</a>
-            </div>
+              <a href='experiments.php?mode=view&id={{ link.entityid }}' class='text-dark mr-auto'>{{ link.title|raw }}</a>
+            {# delete link #}
+            <button data-action='destroy-related-link' type='button' data-endpoint='experiments_links' data-target='{{ link.entityid }}' title='{{ 'Delete'|trans }}' class='btn p-2 hl-hover-gray lh-normal border-0 my-n2'>
+              <i class='fas fa-fw fa-trash-alt'></i>
+            </button>
             {# toggle body #}
-            <div class='ml-auto align-self-center mr-3'>
-              <div>
-                {# delete link #}
-                <a data-action='destroy-related-link' data-endpoint='experiments_links' data-target='{{ link.entityid }}' title='{{ 'Delete'|trans }}' class='rounded p-2 hl-hover-gray'>
-                  <i class='fas fa-trash-alt'></i>
-                </a>
-                <span data-type='experiments' data-action='toggle-body' data-id='{{ link.entityid }}' data-randid='{{ randomId }}' title='{{ 'Toggle content'|trans }}' class='rounded p-2 hl-hover-gray'>
-                  <i class='fas fa-square-plus'></i>
-                </span>
-              </div>
-            </div>
+            <button type='button' data-type='experiments' data-action='toggle-body' data-id='{{ link.entityid }}' data-randid='{{ randomId }}' title='{{ 'Toggle content'|trans }}' aria-label='{{ 'Toggle content'|trans }}' class='btn p-2 hl-hover-gray mr-3 lh-normal border-0 my-n2'>
+              <i class='fas fa-fw fa-square-plus'></i>
+            </button>
           </div>
           <div hidden id='{{ randomId }}'>
             <div></div>
           </div>
-        {% endfor %}
-      </div>
+        </div>
+      {% endfor %}
     </div>
 
     <!-- TODO FIXME
@@ -149,37 +129,29 @@
 
   {# RELATED ITEMS #}
   {% if relatedItemsArr %}
-    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down mr-2 fa-fw'></i>{{ 'Related items'|trans }}</h3>
+    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='relatedItemsDiv'><i class='fas fa-caret-down mr-2 fa-fw'></i>{{ 'Related items'|trans }}</h3>
     <div class='row mt-2' id='relatedItemsDiv' data-save-hidden='relatedItemsDiv'>
-      <div class='ml-3 mt-3 col-md-12' id='relatedItemsDiv'>
-        {% for link in relatedItemsArr %}
+      {% for link in relatedItemsArr %}
+        <div class='ml-3 mt-3 col-md-12'>
           {% set randomId = random() %}
-          <div class='d-flex mb-4' id='parent_{{ randomId }}'>
-            <div class='align-self-center mr-2'>
-              <i class='fas fa-link fa-fw'></i>
-            </div>
-            <div>
-              <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span>
-              <a href='database.php?mode=view&id={{ link.entityid }}' class='text-dark'>{{ link.title|raw }}</a>
-            </div>
+          <div class='d-flex mb-4 align-items-center' id='parent_{{ randomId }}'>
+            <i class='fas fa-link fa-fw mr-2'></i>
+            <span class='catstat-btn category-btn mr-1' style='--bg:#{{ link.category_color }}'>{{ link.category_title|raw }}</span>
+            <a href='database.php?mode=view&id={{ link.entityid }}' class='text-dark mr-auto'>{{ link.title|raw }}</a>
+            {# delete link #}
+            <button data-action='destroy-related-link' type='button' data-endpoint='items_links' data-target='{{ link.entityid }}' title='{{ 'Delete'|trans }}' class='btn p-2 hl-hover-gray lh-normal border-0 ny-n2'>
+              <i class='fas fa-trash-alt'></i>
+            </button>
             {# toggle body #}
-            <div class='ml-auto align-self-center mr-3'>
-              <div>
-                {# delete link #}
-                <a data-action='destroy-related-link' data-endpoint='items_links' data-target='{{ link.entityid }}' title='{{ 'Delete'|trans }}' class='rounded p-2 hl-hover-gray'>
-                  <i class='fas fa-trash-alt'></i>
-                </a>
-                <span data-type='items' data-action='toggle-body' data-id='{{ link.entityid }}' data-randid='{{ randomId }}' title='{{ 'Toggle content'|trans }}' class='rounded p-2 hl-hover-gray'>
-                  <i class='fas fa-square-plus'></i>
-                </span>
-              </div>
-            </div>
+            <button type='button' data-type='items' data-action='toggle-body' data-id='{{ link.entityid }}' data-randid='{{ randomId }}' title='{{ 'Toggle content'|trans }}' aria-label='{{ 'Toggle content'|trans }}' class='btn p-2 hl-hover-gray mr-3 lh-normal border-0 ny-n2'>
+              <i class='fas fa-square-plus'></i>
+            </button>
           </div>
           <div hidden id='{{ randomId }}'>
             <div></div>
           </div>
-        {% endfor %}
-      </div>
+        </div>
+      {% endfor %}
     </div>
 
     <!-- TODO FIXME
