--- a/src/templates/archive-user-modal.html
+++ b/src/templates/archive-user-modal.html
@@ -12,7 +12,7 @@
     <div class='modal-content'>
       <div class='modal-header'>
         <h5 class='modal-title' id='archiveUserModalLabel_{{ user.userid }}'><i class='fas fa-fw fa-box-archive'></i> {{ action }}</h5>
-        <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+        <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
@@ -21,8 +21,8 @@
         {% if not user.archived %}
           {# Lock and archive experiments? #}
           <div class='d-flex justify-content-between mb-2'>
-            <div class='d-inline mr-1'><p>{{ 'Lock and archive all experiments'|trans }}</p></div>
-            <label class='switch' for='lockSwitch_{{ user.userid }}' title='{{ 'Lock and archive all experiments'|trans }}'>
+            <label class='d-inline mr-1' for='lockSwitch_{{ user.userid }}'>{{ 'Lock and archive all experiments'|trans }}</label>
+            <label class='switch'>
               <input type='checkbox' autocomplete='off' id='lockSwitch_{{ user.userid }}'>
               <span class='slider'></span>
             </label>
