--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -22,27 +22,32 @@
     {% if experimentsCategoryArr %}
       <h5>{{ 'Browse by category'|trans }}</h5>
       <div class='d-flex my-2 flex-wrap lh-150'>
-        {% for category in experimentsCategoryArr %}
-        <a href='experiments.php?mode=show&cat={{ category.id }}'><span style='--bg: #{{ category.color }}' class='catstat-btn category-btn mr-2'>{{ category.title|raw }}</a>
-        {% endfor %}
+        {% for category in experimentsCategoryArr -%}
+          <a href='experiments.php?mode=show&cat={{ category.id }}' class='btn mr-2 catstat-btn category-btn mb-1' style='--bg: #{{ category.color }}'>{{ category.title|raw }}</a>
+        {%- endfor %}
       </div>
       <hr>
     {% endif %}
     {% if experimentsStatusArr %}
       <h5>{{ 'Browse by status'|trans }}</h5>
       <div class='d-flex my-2 flex-wrap lh-150'>
-        {% for status in experimentsStatusArr %}
-        <a href='experiments.php?mode=show&status={{ status.id }}'><span style='--bg: #{{ status.color }}' class='catstat-btn status-btn mr-2'><i class='fas fa-circle fa-fw' style='--bg:#{{ status.color }}'></i> {{ status.title|raw }}</a>
-        {% endfor %}
+        {% for status in experimentsStatusArr -%}
+          <a href='experiments.php?mode=show&status={{ status.id }}' class='btn mr-2 catstat-btn status-btn mb-1' style='--bg: #{{ status.color }}'><i class='fas fa-circle fa-fw' style='--bg:#{{ status.color }}'></i> {{ status.title|raw }}</a>
+        {%- endfor %}
       </div>
       <hr>
     {% endif %}
     <h5>{{ 'Last modified experiments'|trans }}</h5>
-    <ul class='list-group mt-1'>
+    <div class='list-group mt-1'>
       {% for experiment in experimentsArr %}
-      <a href='experiments.php?mode=view&id={{ experiment.id }}' class='list-group-item hl-hover-gray breakable'>{% if experiment.category_title %}<span style='--bg: #{{ experiment.category_color }}' class='catstat-btn category-btn mr-2'>{{ experiment.category_title|raw }}</span>{% endif %}{{ experiment.title|raw }} <span title='{{ experiment.modified_at }}' class='relative-moment text-nowrap smallgray'></span></a>
+        <a href='experiments.php?mode=view&id={{ experiment.id }}' class='list-group-item hl-hover-gray breakable'>
+          {%- if experiment.category_title -%}
+            <span style='--bg: #{{ experiment.category_color }}' class='d-inline-block catstat-btn category-btn mr-2'>{{ experiment.category_title|raw }}</span>
+          {%- endif -%}
+          {{- experiment.title|raw }} <span title='{{ experiment.modified_at }}' class='relative-moment text-nowrap smallgray'></span>
+        </a>
       {% endfor %}
-    </ul>
+    </div>
   </div>
   <div class='col-md-4 mt-2 mt-md-0'>
     <div class='d-flex justify-content-between'>
@@ -52,37 +57,42 @@
     <hr>
     <h5>{{ 'Browse by category'|trans }}</h5>
     <div class='d-flex my-2 flex-wrap lh-150'>
-      {% for category in itemsCategoryArr %}
-      <a href='database.php?mode=show&cat={{ category.id }}'><span style='--bg: #{{ category.color }}' class='catstat-btn category-btn  mr-2'>{{ category.title|raw }}</a>
-      {% endfor %}
+      {% for category in itemsCategoryArr -%}
+        <a href='database.php?mode=show&cat={{ category.id }}' class='btn mr-2 catstat-btn category-btn lh-normal border-0 mb-1' style='--bg: #{{ category.color }}'>{{ category.title|raw }}</a>
+      {%- endfor %}
     </div>
     <hr>
     {% if itemsStatusArr %}
       <h5>{{ 'Browse by status'|trans }}</h5>
       <div class='d-flex my-2 flex-wrap lh-150'>
-        {% for status in itemsStatusArr %}
-        <a href='database.php?mode=show&status={{ status.id }}'><span style='--bg: #{{ status.color }}' class='catstat-btn status-btn mr-2'><i class='fas fa-circle fa-fw' style='--bg:#{{ status.color }}'></i> {{ status.title|raw }}</a>
-        {% endfor %}
+        {% for status in itemsStatusArr -%}
+          <a href='database.php?mode=show&status={{ status.id }}' class='btn mr-2 catstat-btn status-btn lh-normal border-0 mb-1' style='--bg: #{{ status.color }}'><i class='fas fa-circle fa-fw' style='--bg:#{{ status.color }}'></i> {{ status.title|raw }}</a>
+        {%- endfor %}
       </div>
       <hr>
     {% endif %}
     <h5>{{ 'Last modified resources'|trans }}</h5>
-    <ul class='list-group mt-1'>
+    <div class='list-group mt-1'>
       {% for item in itemsArr %}
-      <a href='database.php?mode=view&id={{ item.id }}' class='list-group-item hl-hover-gray breakable'>{% if item.category_title %}<span style='--bg: #{{ item.category_color }}' class='catstat-btn category-btn mr-2'>{{ item.category_title }}</span>{% endif %}{{ item.title|raw }} <span title='{{ item.modified_at }}' class='relative-moment text-nowrap smallgray'></span></a>
+        <a href='database.php?mode=view&id={{ item.id }}' class='list-group-item hl-hover-gray breakable'>
+          {% if item.category_title %}
+            <span style='--bg: #{{ item.category_color }}' class='d-inline-block catstat-btn category-btn mr-2'>{{ item.category_title }}</span>
+          {% endif %}
+          {{ item.title|raw }} <span title='{{ item.modified_at }}' class='relative-moment text-nowrap smallgray'></span>
+        </a>
       {% endfor %}
-    </ul>
+    </div>
   </div>
   <div class='col-md-4 mt-2 mt-md-0'>
     <div class='d-flex justify-content-between'>
       <h4>{{ 'Scheduled bookings'|trans }}</h4>
-      <a href='team.php?tab=1'><button type='button' class='btn btn-secondary'>{{ 'Scheduler'|trans }}</button></a>
+      <a href='team.php?tab=1' class='btn btn-secondary'>{{ 'Scheduler'|trans }}</a>
     </div>
-    <ul class='list-group mt-1'>
+    <div class='list-group mt-1'>
       {% for booking in bookingsArr %}
-      <a href='team.php?tab=1&item={{ booking.items_id }}&start={{ booking.start|url_encode }}' class='list-group-item hl-hover-gray'><span style='color: {{ booking.color }}'>{{ booking.title|raw }}</span> <span title='{{ booking.start|date('Y-m-d H:i:s') }}' class='relative-moment text-nowrap smallgray'></span></a>
+        <a href='team.php?tab=1&item={{ booking.items_id }}&start={{ booking.start|url_encode }}' class='list-group-item hl-hover-gray'><span style='color: {{ booking.color }}'>{{ booking.title|raw }}</span> <span title='{{ booking.start|date('Y-m-d H:i:s') }}' class='relative-moment text-nowrap smallgray'></span></a>
       {% endfor %}
-    </ul>
+    </div>
   </div>
 </div>
 
