--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,18 +1,18 @@
 <footer>
   <p class='footer-left'>
-    <a title='{{ 'Follow eLabFTW on X!'|trans }}' href='https://twitter.com/elabftw' style='color:#343434'>
+    <a title='{{ 'Follow eLabFTW on X!'|trans }}' aria-label='{{ 'Follow eLabFTW on X!'|trans }}' href='https://twitter.com/elabftw' style='color:#343434'>
       <i title='X' class='fab fa-x-twitter fa-lg'></i>
     </a>
 
-    <a title='{{ 'Code repository on GitHub'|trans }}' style='color:#343434' href='https://github.com/elabftw/elabftw'>
+    <a title='{{ 'Code repository on GitHub'|trans }}' aria-label='{{ 'Code repository on GitHub'|trans }}' style='color:#343434' href='https://github.com/elabftw/elabftw'>
       <i title='GitHub' class='fab fa-github fa-lg'></i>
     </a>
 
-    <a title='{{ 'Join the discussion on Gitter'|trans }}' style='color:#343434' href='https://gitter.im/elabftw/elabftw'>
+    <a title='{{ 'Join the discussion on Gitter'|trans }}' aria-label='{{ 'Join the discussion on Gitter'|trans }}' style='color:#343434' href='https://gitter.im/elabftw/elabftw'>
       <i title='Gitter' class='fas fa-comment-dots fa-lg'></i>
     </a>
 
-    <a title='{{ 'Submit feedback'|trans }}' data-action='report-bug' style='color:#343434' href='#'>
+    <a title='{{ 'Submit feedback'|trans }}' aria-label='{{ 'Report bug'|trans }}' data-action='report-bug' style='color:#343434' href='#'>
       <i title='Report bug' class='fas fa-bug fa-lg'></i>
     </a>
 
@@ -70,8 +70,9 @@
   <div class='modal-dialog modal-xl' role='document'>
     <div class='modal-content'>
       <div class='modal-header'>
-        <h5 class='modal-title' id='policiesModalLabel'></h5>
-        <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+        {# "placeholder" will be replaced with real title by js upon data-action='show-policy' #}
+        <h5 class='modal-title' id='policiesModalLabel'>placeholder</h5>
+        <button type='button' class='close' data-dismiss='modal' aria-label='{{ 'Close'|trans }}'>
           <span aria-hidden='true'>&times;</span>
         </button>
       </div>
@@ -84,6 +85,10 @@
   </div>
 </div>
 {# end policies policy modal #}
+{# some 3rd party tools append content to the end but we don't want to see those errors #}
+{%- if App.Config.configArr.debug and mode == 'edit' -%}
+  <!-- [html-validate-disable input-missing-label, heading-level, no-dup-id, prefer-native-element, wcag/h37, no-redundant-role: suppress errors from 3rd party tools] -->
+{%- endif %}
 </body>
 </html>
 <!-- Made in France | Liberté, Égalité, Fraternité -->
