--- a/src/templates/revisions.html
+++ b/src/templates/revisions.html
@@ -10,11 +10,11 @@
 {% else %}
   <a href='{{ Entity.page }}.php?mode=view&id={{ Entity.id }}'
 {% endif %}
-   class='btn hl-hover-gray' role='button'>
+   class='btn hl-hover-gray'>
     <i class='fas fa-chevron-left mr-1'></i>{{ 'Go back'|trans }}
 </a>
 <div id='compareRevisionsDiv' class='mt-3' hidden>
-  <button class='btn btn-secondary btn-sm' id='compareRevisionsButton' disabled data-action='compare-revisions' data-type='{{ Entity.type }}' aria-label='{{ 'Compare revisions'|trans }}'>
+  <button class='btn btn-secondary btn-sm' id='compareRevisionsButton' type='button' disabled data-action='compare-revisions' data-type='{{ Entity.type }}' aria-label='{{ 'Compare revisions'|trans }}'>
     <i class='fas fa-code-compare fa-fw mr-1 color-white'></i>{{ 'Compare revisions'|trans }}
   </button>
   <div id='compareRevisionsDiffDiv'></div>
@@ -26,7 +26,7 @@
     <li id='parent_{{ randomId }}' class='list-group-item'>
       <div class='d-flex'>
         <div>
-          <input autocomplete='off' type='checkbox' data-action='checkbox-revision' data-id='{{ Entity.id }}' data-revid='{{ revision.id }}' data-type='{{ Entity.type }}' aria-label='Select' class='mr-2' />
+          <input autocomplete='off' type='checkbox' data-action='checkbox-revision' data-id='{{ Entity.id }}' data-revid='{{ revision.id }}' data-type='{{ Entity.type }}' aria-label='{{ 'Select'|trans }}' class='mr-2' />
           <span title='{{ 'Revision ID'|trans }}' class='badge badge-secondary mr-2'>{{ revision.id }}</span>
           <span class='p-1 btn rounded hl-hover-gray' data-type='{{ Entity.type }}' data-id='{{ Entity.id }}' data-revid={{ revision.id }} data-toggle-plus-icon='1' data-randid={{ randomId }} data-action='toggle-body' title='{{ 'Toggle content'|trans }}'>
             <i class='fas fa-square-plus fa-fw'></i>
@@ -34,7 +34,7 @@
           <span class='relative-moment' title='{{ revision.created_at }}'></span> {{ 'by'|trans }} {{ revision.fullname|raw }}
         </div>
         <div class='ml-auto'>
-          {% if not Entity.isReadOnly %}<button data-action='restore-revision' data-id='{{ Entity.id }}' data-type='{{ Entity.type }}' data-revid='{{ revision.id }}' class='btn hl-hover-gray'>{{ 'Restore'|trans }}</button>{% endif %}
+          {% if not Entity.isReadOnly %}<button type='button' data-action='restore-revision' data-id='{{ Entity.id }}' data-type='{{ Entity.type }}' data-revid='{{ revision.id }}' class='btn hl-hover-gray'>{{ 'Restore'|trans }}</button>{% endif %}
         </div>
       </div>
       <div hidden id='{{ randomId }}' style='overflow:auto;margin: 10px 0 0 20px'><div></div></div>
