--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -64,7 +64,7 @@
       </div>
       <span class='tags mathjax-ignore d-flex-inline flex-wrap'>
         {% for tag in Entity.Tags.readAll() %}
-        <a class='tag {{ tag.is_favorite ? 'favorite' }}' href='?mode=show&tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
+        <a class='tag btn {{- tag.is_favorite ? ' favorite' }}' href='?mode=show&tags%5B%5D={{ tag.tag|url_encode }}'>{{ tag.tag|raw }}</a>
         {% endfor %}
       </span>
     {% endif %}
@@ -76,7 +76,7 @@
   {% if Entity.entityData.events_start %}<i class='far fa-calendar-alt'></i>
     {% for event in Entity.entityData.events_start|split('|') %}
     <a href='team.php?item={{ Entity.id }}&start={{ event|url_encode }}'>
-      <button class='m-1 btn btn-neutral relative-moment' title='{{ event|date('Y-m-d H:i:s') }}'></button>
+      <button type='button' class='m-1 btn btn-neutral relative-moment' title='{{ event|date('Y-m-d H:i:s') }}' aria-label='{{ event|date('Y-m-d H:i:s') }}'></button>
     </a>
     {% endfor %}
   {% endif %}
@@ -106,7 +106,7 @@
       {# do not display body if set in metadata, done via css to avoid delayed disappearance after JS is executed #}
       {# body in view mode is text-dark for more lisibility see github issue #52 #}
       <div {{ not displayMainText ? 'hidden' }}>
-        <h3 data-action='toggle-next'class='d-inline togglable-section-title'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Main text'|trans }}</h3>
+        <h3 data-action='toggle-next'class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='body_view'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Main text'|trans }}</h3>
         <div id='body_view' class='pt-2 text-dark'>{{ body|raw }}</div>
         <hr>
       </div>
@@ -124,7 +124,7 @@
 
 {# METADATA view #}
 {% if Entity.entityData.metadata %}
-  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Extra fields'|trans }}</h3>
+  <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='extraFieldsDiv'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Extra fields'|trans }}</h3>
   <div class='mt-2 col-md-6' id='extraFieldsDiv' data-save-hidden='extraFieldsDiv'>
     <ul class='list-group'>
       {{ Entity.entityData.metadata|formatMetadata }}
@@ -140,7 +140,7 @@
 <div id='commentsDiv'>
   {% if App.Session.get('is_auth') and not App.Session.has('is_anon') %}
     <div id='comment'>
-    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Comments'|trans }}</h3>
+    <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' class='d-inline togglable-section-title' tabindex='0' role='button' aria-expanded='true' aria-controls='commentsInnerDiv'><i class='fas fa-caret-down fa-fw mr-2'></i>{{ 'Comments'|trans }}</h3>
     <div class='mt-2' id='commentsInnerDiv' data-save-hidden='commentsInnerDiv'>
         {% for comment in Entity.entityData.comments %}
           <div class='box'>
@@ -151,9 +151,9 @@
                 ({{ 'edited'|trans }} <span title='{{ comment.modified_at }}' class='relative-moment'></span>)
               {% endif %}
               {% if comment.userid == Entity.Users.userData.userid %}
-                <a class='float-right' data-action='destroy-comment' data-id='{{ comment.id }}' title='{{ 'Delete'|trans }}'>
-                    <i class='fas fa-trash-alt fa-lg'></i>
-                </a>
+                <button type='button' class='btn float-right lh-normal border-0 m-0 p-2 my-n2 hl-hover-gray' data-action='destroy-comment' data-id='{{ comment.id }}' title='{{ 'Delete'|trans }}' aria-label='{{ 'Delete'|trans }}'>
+                  <i class='fas fa-fw fa-trash-alt fa-lg'></i>
+                </button>
               {% endif %}
             </div>
             {# the comment itself is only editable by the owner #}
